<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saiby.authenticationrdtb.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/star_big_on" />

    <TextView
        android:id="@+id/tv_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-name-" />

    <TextView
        android:id="@+id/tv_email"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-email-" />

    <TextView
        android:id="@+id/tv_id"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-id-" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_message_here"/>
    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username_here"/>



    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveText"
        android:text="@string/save"
        android:textAppearance="@style/Base.TextAppearance.AppCompat" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:text="@string/show"
        android:onClick="UpdateButton"

        />
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

   <Button
       android:id="@+id/btn_logout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/Logout"
       android:onClick="logOut"
       />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/tv_showname"
            android:layout_width="180dp"
            android:layout_height="200dp"></ListView>

        <ListView
            android:id="@+id/tv_showtext"
            android:layout_width="180dp"
            android:layout_height="200dp" />


    </LinearLayout>


</LinearLayout>
